--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,31 @@
   border-radius: 350px;
   height: 70%;
 }
+
+.fotografo2 {
+  line-height: 350px;
+  border-radius: 350px;
+  height: 80%;
+  box-shadow: 8px -8px 0px 0px rgb(4, 36, 71), 16px -16px 0px 0px rgb(4, 40, 80);
+}
+
+.color {
+  height: 130vh;
+  background-color: rgb(3, 29, 56);
+}
+
+.img {
+  max-width: 4vw;
+  min-width: 3vw !important;
+}
+.filter-white {
+  filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(210deg)
+    brightness(107%) contrast(102%);
+}
+
+.subtitulo-h4 {
+  width: 20vw;
+}
+.texto {
+  width: 13vw;
+}
